--- a/app/assets/css/editor.scss
+++ b/app/assets/css/editor.scss
@@ -1,4 +1,4 @@
-.leazy-editor {
+.yggdraz-editor {
   .ProseMirror {
     outline: none;
     padding-inline: 1rem;
@@ -32,7 +32,7 @@
     }
 
     /* Render the username above the caret */
-    .ProseMirror-yjs-cursor > div {
+    .ProseMirror-yjs-cursor>div {
       border-radius: 3px 3px 3px 0;
       color: #0d0d0d;
       font-size: 12px;
@@ -152,6 +152,7 @@
               content: '';
             }
           }
+
           &:hover {
             border-color: var(--ui-border);
 
@@ -186,18 +187,19 @@
     [data-type='columns'].is-empty::before {
       content: none;
     }
+
     /* Column */
     & {
-      > *:first-child {
+      >*:first-child {
         margin-top: 0;
       }
 
       [data-type='column'] {
-        > *:first-child {
+        >*:first-child {
           margin-top: 0;
         }
 
-        > *:last-child {
+        >*:last-child {
           margin-bottom: 0;
         }
       }
@@ -218,6 +220,7 @@
         border-color: var(--ui-border);
       }
     }
+
     [data-type='horizontalRule'] {
       transition: all .1s ease-in-out;
       cursor: pointer;
@@ -238,6 +241,7 @@
         background: var(--ui-bg-elevated)/20;
       }
     }
+
     :not(.dragging) .ProseMirror-selectednode {
       background: var(--ui-bg-elevated)/20;
       outline: none;
@@ -256,6 +260,7 @@
       width: 100%;
       height: 0;
     }
+
     .ProseMirror-gapcursor {
       position: relative;
       width: 100%;
@@ -276,7 +281,7 @@
 
     .iframe-wrapper {
       &.focus {
-        > div {
+        >div {
           outline: var(--ui-primary) solid 4px;
         }
       }
@@ -335,6 +340,7 @@
 
         &:hover {
           outline-color: #ffc83d;
+
           .image-view__body__button-wrap {
             display: block;
           }
@@ -417,9 +423,10 @@
       display: flex;
       align-items: baseline;
 
-      > div {
+      >div {
         width: 100%;
-        summary + div {
+
+        summary+div {
           border-bottom: 1px solid var(--ui-border);
           margin-top: 0.5rem;
 
@@ -429,7 +436,7 @@
         }
       }
 
-      > button {
+      >button {
         display: flex;
         cursor: pointer;
         background: transparent;
@@ -446,7 +453,7 @@
         }
       }
 
-      &.is-open > button::before {
+      &.is-open>button::before {
         content: '\25BC';
       }
     }
@@ -472,11 +479,13 @@
       }
     }
   }
+
   .ProseMirror[contenteditable='false'] {
     .image-view__body:hover {
       outline-color: transparent;
     }
   }
+
   /*  */
   &.dense {
     .ProseMirror {
@@ -517,6 +526,7 @@
   overflow-y: auto;
   outline: none;
 }
+
 .ai_modal_input_area:empty:before {
   content: attr(placeholder);
   color: rgba(0, 0, 0, 0.24);
@@ -527,13 +537,16 @@
   display: inline-block;
   position: relative;
 }
+
 .ai_modal_input_submit_button_active {
   cursor: pointer;
   background-image: url('data:image/svg+xml,%3Csvg width%3D%2224%22 height%3D%2224%22 viewBox%3D%220 0 24 24%22 fill%3D%22none%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Ccircle cx%3D%2212%22 cy%3D%2212%22 r%3D%229%22 fill%3D%22url(%23paint0_linear_5_2540)%22%2F%3E%3Cpath d%3D%22M11.8535 8.11091L16.0962 12.3536L11.8535 16.5962%22 stroke%3D%22white%22 stroke-width%3D%221.25%22%2F%3E%3Cline x1%3D%2215.3891%22 y1%3D%2212.2714%22 x2%3D%226.90382%22 y2%3D%2212.2714%22 stroke%3D%22white%22 stroke-width%3D%221.25%22%2F%3E%3Cdefs%3E%3ClinearGradient id%3D%22paint0_linear_5_2540%22 x1%3D%2221%22 y1%3D%223%22 x2%3D%223%22 y2%3D%2221%22 gradientUnits%3D%22userSpaceOnUse%22%3E%3Cstop stop-color%3D%22%23DB94FF%22%2F%3E%3Cstop offset%3D%220.456607%22 stop-color%3D%22%235179FF%22%2F%3E%3Cstop offset%3D%221%22 stop-color%3D%22%235AB0FF%22%2F%3E%3C%2FlinearGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
 }
+
 .ai_modal_input_submit_button_active:hover {
   background-image: url('data:image/svg+xml,%3Csvg width%3D%2224%22 height%3D%2224%22 viewBox%3D%220 0 24 24%22 fill%3D%22none%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Ccircle cx%3D%2212%22 cy%3D%2212%22 r%3D%229%22 fill%3D%22url(%23paint0_linear_1387_127239)%22%2F%3E%3Cpath d%3D%22M11.8536 8.11091L16.0962 12.3536L11.8536 16.5962%22 stroke%3D%22white%22 stroke-width%3D%221.25%22%2F%3E%3Cline x1%3D%2215.3891%22 y1%3D%2212.2714%22 x2%3D%226.90382%22 y2%3D%2212.2714%22 stroke%3D%22white%22 stroke-width%3D%221.25%22%2F%3E%3Cdefs%3E%3ClinearGradient id%3D%22paint0_linear_1387_127239%22 x1%3D%2221%22 y1%3D%223%22 x2%3D%223%22 y2%3D%2221%22 gradientUnits%3D%22userSpaceOnUse%22%3E%3Cstop stop-color%3D%22%23C182E0%22%2F%3E%3Cstop offset%3D%220.456607%22 stop-color%3D%22%23476BE0%22%2F%3E%3Cstop offset%3D%221%22 stop-color%3D%22%234F9BE0%22%2F%3E%3C%2FlinearGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
 }
+
 .ai_modal_input_submit_button {
   width: 24px;
   height: 24px;
@@ -568,9 +581,11 @@
   text-size-adjust: none;
   text-rendering: auto;
 }
+
 .ai_modal_edit_board_footer {
   padding: 16px 0 8px 0;
 }
+
 .ai_model_edit_board_buttons {
   display: flex;
   flex-direction: row;
@@ -578,15 +593,18 @@
   height: 30px;
   width: 100%;
 }
+
 .ai_model_edit_board_left_buttons {
   display: flex;
   flex-direction: row;
 }
+
 .ai_model_edit_board_right_button {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .ai_modal_edit_board_header {
   display: flex;
   justify-content: space-between;
@@ -603,31 +621,37 @@
   font-weight: 700;
   font-size: 16px;
 }
+
 .heading-1 {
   font-weight: 700;
   font-size: 28px;
   line-height: 1.6;
 }
+
 .heading-2 {
   font-weight: 700;
   font-size: 24px;
   line-height: 1.6;
 }
+
 .heading-3 {
   font-size: 20px;
   font-weight: 700;
   line-height: 1.6;
 }
+
 .heading-4 {
   font-size: 16px;
   font-weight: 700;
   line-height: 1.6;
 }
+
 .heading-5 {
   font-size: 14px;
   font-weight: 700;
   line-height: 1.6;
 }
+
 .heading-6 {
   font-size: 14px;
   font-weight: 700;
